fix placeholder overflow

--- a/src/components/AuctionHouseBody/AuctionGallery/AuctionGallery.module.css
+++ b/src/components/AuctionHouseBody/AuctionGallery/AuctionGallery.module.css
@@ -81,6 +81,7 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
+	overflow: hidden;
 	background-color: var(--clr-surface);
 	z-index: 2;
 	animation-name: placeholder;
